manifests/flowmarkt/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: couchdb
  labels:
    app: couchdb
spec:
  ports:
    - port: 5984
      name: db
  clusterIP: None
  selector:
    app: couchdb

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: couchdb
spec:
  serviceName: "couchdb"
  replicas: 1
  selector:
    matchLabels:
      app: couchdb
  template:
    metadata:
      annotations: 
        k8up.io/backupcommand: sh -c 'curl http://$COUCHDB_USER:$COUCHDB_PASSWORD@localhost:5984/flohmarkt/_all_docs?include_docs=true'
        k8up.io/file-extension: .json
      labels:
        app: couchdb
    spec:
      containers:
        - name: couchdb
          image: docker.io/library/couchdb:3.4
          ports:
            - containerPort: 5984
              name: db
          volumeMounts:
            - name: couchdb-data
              mountPath: /opt/couchdb/data
  volumeClaimTemplates:
    - metadata:
        name: couchdb-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
